<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Licensed to UbiCollab.org under one or more contributor
  ~ license agreements.  See the NOTICE file distributed
  ~ with this work for additional information regarding
  ~ copyright ownership. UbiCollab.org licenses this file
  ~ to you under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance
  ~ with the License. You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="20dp"
        android:text="@string/profile_name"
        android:paddingBottom="10dp"
        android:textColor="#000"
        android:textSize="22sp" />

    <View
        android:id="@+id/view_split_name"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_alignBottom="@id/profile_name"
        android:background="?android:attr/dividerVertical" />

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/profile_profile_picture"
        android:layout_below="@id/view_split_name"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/profile_age"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_alignParentRight="true"
        android:layout_below="@id/view_split_name"
        android:layout_toRightOf="@id/profile_profile_picture"
        android:paddingTop="10dp"
        android:gravity="center"
        android:text="@string/profile_age"
        android:textColor="#000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/profile_location"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:layout_below="@id/profile_age"
        android:layout_toRightOf="@id/profile_profile_picture"
        android:gravity="center"
        android:text="@string/profile_location"
        android:textColor="#000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/profile_country"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_below="@id/profile_location"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/profile_profile_picture"
        android:paddingTop="10dp"
        android:gravity="center"
        android:text="@string/profile_country"
        android:textColor="#000"
        android:textSize="22sp" />

</RelativeLayout>
