<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/area_comparison_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/area_comparison_setting"
            android:textColor="#000"
            android:layout_alignParentLeft="true"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/areaCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:padding="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/location_comparison_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/location_comparison_setting"
            android:textColor="#000"
            android:layout_alignParentLeft="true"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/locationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:padding="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/res_comparison_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/res_comparison_setting"
            android:textColor="#000"
            android:layout_alignParentLeft="true"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/resCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:padding="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/energy_comparison_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/energy_comparison_setting"
            android:textColor="#000"
            android:layout_alignParentLeft="true"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/energyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:padding="10dp" />

    </RelativeLayout>




</LinearLayout>